Tue Aug  1 20:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.3.h:
          Enabled some features in ACE because vxworks 6.3 delivers more system
          api's

Mon Jul 31 19:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stropts.inl (ioctl):
          Check for ACE_HAS_IOCTL_INT_3_PARAM to make it easier to handle
          the different VxWorks versions

        * config-vxworks5.x.h:
        * config-vxworks6.2.h:
        * config-vxworks6.3.h:
          Added ACE_HAS_IOCTL_INT_3_PARAM

Mon Jul 31 18:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Containers_T.{h,cpp}:
        * Hash_Map_Manager_T.{h,cpp}:
        * Map_Manager.{h,inl}:
        * Node.{h,cpp}:
          Removed check for !ACE_HAS_BROKEN_NOOP_DTORS, this define is
          not in any config file

        * config-unixware-7.1.0.udk.h:
          Removed commented out define

        * Token_Collection.{h,cpp}:
        * Token_Manager.{h,inl}:
          Changed debug flag to be a bool

        * SOCK_Dgram_Bcast.h
        * TP_Reactor.h
        * Signal.h
        * Thread.h
        * Thread_Adapter.h
          Documentation updates

Mon Jul 31 14:57:08 UTC 2006  Steve Huston  <shuston@riverace.com>

        * apps/Makefile.am: Removed hard-coded inclusion of gperf in the
          SUBDIRS list; it's an optional piece; see also
          Tue Jun 20 20:19:37 UTC 2006  Steve Huston  <shuston@riverace.com>
          Thanks to Robert Schwebel <robert at schwebel dot de> for this fix.

Mon Jul 31 14:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Cleanup of these files

Sat Jul 29 11:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-icc-common.h:
          Added fix for Intel C++ 9.1

Fri Jul 28 15:32:27 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/SSL/Makefile.am
        * ace/QoS/Makefile.am